<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/fixed_wakeup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@color/backgroundDark"
        android:elegantTextHeight="true"
        android:elevation="0dp"
        android:text="@string/fixed_wakeup"
        android:textSize="24sp" />

    <Button
        android:id="@+id/fixed_bedtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@color/backgroundDark"
        android:text="@string/fixed_bedtime"
        android:textSize="24sp" />

    <Button
        android:id="@+id/repeating_alarms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@color/backgroundDark"
        android:text="@string/repeating_alarms"
        android:textSize="24sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@color/backgroundDark"
        android:text="@string/settings"
        android:textSize="24sp" />
</LinearLayout>